[package]
name = "mk20d7-hal"
version = "0.1.1"
authors = ["Dylan Frankland <dylan@frankland.io>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "HAL for the MK20D7 family of microcontrollers"
keywords = ["arm", "cortex-m", "mk20", "hal"]
license = "MIT"
repository = "https://github.com/dfrankland/mk20d7-hal"

[dependencies]
cortex-m = "0.7.3"
mk20d7 = "0.1.2"
bitrate = "0.1.1"
nb = "1.1.0"
bit_field = "0.10.2"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.1"

[dependencies.cast]
default-features = false
version = "0.3.0"

[dependencies.void]
default-features = false
version = "1.0.2"

[features]
rt = ["mk20d7/rt"]
